# travel_planning_app

./: .dockerignore  .env copy  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  db.yml  docker-publish.yml  lint_and_test.yml
migrations/: V1__hello_world.sql  V2__add_new_trips_table.sql  V3__add_new_events_table.sql  V4__add_new_col_events_table.sql  V4__durp.sql  V5__add_new_col_mode_events_table.sql
travel_app/: app.py  db.py  server.py
travel_app/controllers/: home_controller.py  trips_controller.py
travel_app/repositories/: test_trips_repository.py  trip_repository.py  trips_repository.py
travel_app/service/: trip_estimator_service.py
travel_app/static/: maps.js
travel_app/static/css/: global.css
travel_app/templates/layouts/: layout.html
travel_app/templates/trips/: index.html  trip.html
