[project]
name = "travel-planning-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "googlemaps>=4.10.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
]

[tool.pyright]
include = ["travel_app"]
